Finished Recipe, IngredientDetail and RecipeBook. fixed bugs considering input for when removing groceries.  all around improved code and tests, started on removing checkstyle errors in FoodStorage